# SFML-Game

./: CMakeLists.txt  README.md
src/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  FrameCounter.cpp  FrameCounter.h  Game.cpp  Game.h  Player.cpp  Player.h
src/scenes/: MainMenu.cpp  MainMenu.h
src/utilities/: Logger.cpp  Logger.h
